apps/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.5.2
          imagePullPolicy: Always

          ports:
            - containerPort: 9696

          volumeMounts:
            - name: config
              mountPath: /config

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
