apps/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - media.greiner.home
      secretName: prowlarr-tls

  rules:
    - host: prowlarr.greiner.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
